# currency_fetch

./: .gitignore  README.md  pyproject.toml  run.sh
.prodcontainer/: docker-compose.yaml  dockerfile  nginx.conf
.prodcontainer/conf.d/: nginx-test.conf
tests/: test_testclient.py
webcur/: __init__.py  config.py  main.py
webcur/database/: repository.py
webcur/models/: currency_rate_resp.py
webcur/models/external_api/: okx_common.py  okx_request.py  okx_response.py
webcur/routes/: exchange.py  route.py
webcur/service/: exhachanger.py  injectors.py
webcur/service/external_api/: BinanceIntegration.py  OKXintegration.py  baseapi.py
