[project]
name = "webcur"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.109.0",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "rich>=13.7.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
